examples/kubernetes/quickstarts/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quickstarts

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
  namespace: quickstarts
  labels:
    app.kubernetes.io/name: echo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echo-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo-app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: echo-app
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "containous/whoami:latest"
          args: [ "--port", "8080", "--name", "echo-app" ]
          ports:
            - name: http-port
              protocol: TCP
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: echo-app
  namespace: quickstarts
spec:
  ports:
    - name: app-port
      port: 8080
      targetPort: http-port
  selector:
    app.kubernetes.io/name: echo-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-app
  namespace: quickstarts
  labels:
    app.kubernetes.io/name: echo-app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://heimdall.heimdall.svc.cluster.local:4456/$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization"
spec:
  rules:
    - host: echo-app.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-app
                port:
                  number: 8080
